--- a/mcr_reports/views/report/account_report_invoice_document.xml
+++ b/mcr_reports/views/report/account_report_invoice_document.xml
@@ -43,24 +43,28 @@
                 <p t-if="o.partner_id.import_information">
                     <span t-field="o.partner_id.import_information"/>
                 </p>
-                <p t-if="o.number_of_pallets">
+                <div>
+                    <strong>Origen España</strong>
+                </div>
+                <div t-if="o.number_of_pallets">
                     Number of pallets: <span t-field="o.number_of_pallets"/>
-                </p>
-                <p t-if="o.total_delivery_weight">
+                </div>
+                <div t-if="o.total_delivery_weight">
                     Bruto weight in Kg: <span t-field="o.total_delivery_weight"/>
-                </p>
-                <p t-if="o.partner_id.other_info_1">
+                </div>
+                <div t-if="o.partner_id.other_info_1">
                     <span t-field="o.partner_id.other_info_1"/>
-                </p>
-                <p t-if="o.invoice_incoterm_id">
+                </div>
+                <div t-if="o.invoice_incoterm_id">
                     Incoterm: <span t-field="o.invoice_incoterm_id.name"/>
-                </p>
-                <p t-if="o.invoice_partner_bank_id">
+                </div>
+                <br />
+                <div t-if="o.invoice_partner_bank_id">
                     Bank Account: <span t-field="o.invoice_partner_bank_id.bank_id.name"/>
                     / RIB: <span t-esc="' '.join(o.invoice_partner_bank_id.acc_number.split(' ')[1:])"/>
                     / BIC: <span t-field="o.invoice_partner_bank_id.bank_id.bic"/>
                     / IBAN: <span t-esc="o.invoice_partner_bank_id.acc_number[:4]"/>
-                </p>
+                </div>
             </xpath>
 
             <xpath expr="//th[@name='th_taxes']" position="attributes">
