--- a/mcr_reports/views/report/account_report_invoice_document.xml
+++ b/mcr_reports/views/report/account_report_invoice_document.xml
@@ -31,7 +31,7 @@
                     Num de BL: <span  t-field="o.shipping_number_1" />
                 </div>
             </xpath>
-
+            <!-- El siguiente xpath no se a que se refiere-->
             <xpath expr="//div[hasclass('clearfix')]/../p[1]" position="attributes">
                 <attribute name="class">d-none</attribute>
             </xpath>
@@ -41,25 +41,25 @@
                     <span t-field="o.legal_text" class="p-1" style="height: 10px;"/>
                 </p>
                 <p t-if="o.partner_id.import_information">
-                    <span t-field="o.partner_id.import_information"/>
+                    <strong><span style="font-size: 14px;" t-field="o.partner_id.import_information"/></strong>
                 </p>
-                <div>
+                <div style="font-size: 14px;">
                     <strong>Origen España</strong>
                 </div>
-                <div t-if="o.number_of_pallets">
+                <div t-if="o.number_of_pallets" style="font-size: 14px;">
                     Number of pallets: <span t-field="o.number_of_pallets"/>
                 </div>
-                <div t-if="o.total_delivery_weight">
+                <div t-if="o.total_delivery_weight" style="font-size: 14px;">
                     Bruto weight in Kg: <span t-field="o.total_delivery_weight"/>
                 </div>
-                <div t-if="o.partner_id.other_info_1">
+                <div t-if="o.partner_id.other_info_1" style="font-size: 14px;">
                     <span t-field="o.partner_id.other_info_1"/>
                 </div>
-                <div t-if="o.invoice_incoterm_id">
+                <div t-if="o.invoice_incoterm_id" style="font-size: 14px;">
                     Incoterm: <span t-field="o.invoice_incoterm_id.name"/>
                 </div>
                 <br />
-                <div t-if="o.invoice_partner_bank_id">
+                <div t-if="o.invoice_partner_bank_id" style="font-size: 14px;">
                     Bank Account: <span t-field="o.invoice_partner_bank_id.bank_id.name"/>
                     / RIB: <span t-esc="' '.join(o.invoice_partner_bank_id.acc_number.split(' ')[1:])"/>
                     / BIC: <span t-field="o.invoice_partner_bank_id.bank_id.bic"/>
@@ -67,6 +67,14 @@
                 </div>
             </xpath>
 
+            <!-- Condiciones de pago -->
+            <xpath expr="//p[@name='payment_term']" position="replace">
+                    <div t-if="o.invoice_payment_term_id" name="payment_term" style="font-size: 14px;">
+                        <span t-field="o.invoice_payment_term_id.note"/>
+                    </div>
+            </xpath>
+
+            <!-- Tampoco encuentra la siguiente expresión -->
             <xpath expr="//th[@name='th_taxes']" position="attributes">
                 <attribute name="t-if">False</attribute>
             </xpath>
