--- a/mcr_reports/static/src/css/web_external_layout.scss
+++ b/mcr_reports/static/src/css/web_external_layout.scss
@@ -17,9 +17,10 @@
 
         img {
             position: absolute;
-            top: 8mm;
-            max-width: 28mm;
-            max-height: 28mm;
+            top: 18mm;
+            right: -5mm;
+            max-width: 40mm;
+            max-height: 66mm;
         }
     }
 }
