--- a/mcr_reports/views/account_move_views.xml
+++ b/mcr_reports/views/account_move_views.xml
@@ -7,15 +7,32 @@
             <field name="priority">150</field>
             <field name="inherit_id" ref="account.view_move_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//field[@name='ref']" position="attributes">
+                    <attribute name="string">Reference</attribute>
+                </xpath>           
                 <xpath expr="//field[@name='ref']" position="after">
                     <field name="information_program" attrs="{'invisible': [('type', '!=', 'out_invoice')]}" />
                     <field name="invoice_type" required="context.get('extra_required', False)" attrs="{'invisible': [('type', '=', 'entry')]}" />
+                    <!-- <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" attrs="{'invisible': ['|','&amp;',['type','=','out_invoice'],['type','=','entry'],['journal_id','=','sale']]}" /> -->
+                    <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" attrs="{'invisible': ['|',['type','=','out_invoice'],['type','=','entry']]}" />
                 </xpath>
                 <xpath expr="//field[@name='currency_id']" position="after">
                     <field name="shipping_number_1" attrs="{'invisible': [('type', '=', 'entry')]}" />
                     <field name="number_of_pallets" attrs="{'invisible': [('type', '=', 'entry')]}" />
                     <field name="total_delivery_weight" required="context.get('extra_required', False)" attrs="{'invisible': [('type', '=', 'entry')]}" />
                     <field name="legal_text" invisible="1" />
+                </xpath>
+            </field>
+        </record>
+        <record id="view_account_move_tree" model="ir.ui.view">
+            <field name="name">account.move.tree</field>
+            <field name="model">account.move</field>
+            <field name="priority">150</field>
+            <field name="inherit_id" ref="account.view_invoice_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='name']" position="after">
+                    <!-- <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" attrs="{'invisible': ['type','=','out_invoice']}" /> -->
+                    <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" invisible="context.get('default_type') in ('out_invoice', 'out_refund','out_receipt')" />
                 </xpath>
             </field>
         </record>
