--- a/mcr_reports/views/account_move_views.xml
+++ b/mcr_reports/views/account_move_views.xml
@@ -34,6 +34,10 @@
                     <!-- <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" attrs="{'invisible': ['type','=','out_invoice']}" /> -->
                     <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" invisible="context.get('default_type') in ('out_invoice', 'out_refund','out_receipt')" />
                 </xpath>
+                <xpath expr="//field[@name='invoice_origin']" position="attributes">
+                    <attribute name="attrs">{}</attribute>
+                    <attribute name="invisible">1</attribute>
+                </xpath>
             </field>
         </record>
 
