--- a/mcr_reports/views/report/account_report_invoice_document.xml
+++ b/mcr_reports/views/report/account_report_invoice_document.xml
@@ -36,48 +36,49 @@
                 <attribute name="class">d-none</attribute>
             </xpath>
             <!--Ampliar el ancho del subtotal-->
-            <!--
-            <xpath expr='&lt;div t-attf-class="#{&apos;col-4&apos; if report_type != &apos;html&apos; else &apos;col-sm-7 col-md-5&apos;} ml-auto"&gt;' position="replace">
-                <div t-attf-class="#{'col-3' if report_type != 'html' else 'col-sm-7 col-md-5'} ml-auto">
-                    <table class="table table-sm;page-break-inside: avoid;">
-                        <tr class="border-black o_subtotal" style="">
-                            <td><strong>Subtotal</strong></td>
-                            <td class="text-right">
-                                <span t-field="o.amount_untaxed"/>
-                            </td>
-                        </tr>
-                        <t t-foreach="o.amount_by_group" t-as="amount_by_group">
-                            <tr style="">
-                                <t t-if="len(o.line_ids.filtered(lambda line: line.tax_line_id)) == 1 and o.amount_untaxed == amount_by_group[2]">
-                                    <td><span t-esc="amount_by_group[0]"/></td>
-                                    <td class="text-right o_price_total">
-                                        <span t-esc="amount_by_group[3]"/>
-                                    </td>
-                                </t>
-                                <t t-else="">
-                                    <td>
-                                        <span t-esc="amount_by_group[0]"/>
-                                        <span>&amp;nbsp;<span>on</span>
-                                            <t t-esc="amount_by_group[4]"/>
-                                        </span>
-                                    </td>
-                                    <td class="text-right o_price_total">
-                                        <span t-esc="amount_by_group[3]"/>
-                                    </td>
-                                </t>
+             <xpath expr="//div[@id='total']" position="replace">
+                <div id="total" class="row">
+                    <div t-attf-class="#{'col-5' if report_type != 'html' else 'col-sm-7 col-md-5'} ml-auto">
+                        <table class="table table-sm;page-break-inside: avoid;">
+                            <tr class="border-black o_subtotal" style="">
+                                <td><strong>Subtotal</strong></td>
+                                <td class="text-right">
+                                    <span t-field="o.amount_untaxed"/>
+                                </td>
                             </tr>
-                        </t>
-                        <tr class="border-black o_total">
-                            <td><strong>Total</strong></td>
-                            <td class="text-right">
-                                <span t-field="o.amount_total"/>
-                            </td>
-                        </tr>
-                    </table>
-                </div>                
-            </xpath>
-            -->
+                            <t t-foreach="o.amount_by_group" t-as="amount_by_group">
+                                <tr style="">
+                                    <t t-if="len(o.line_ids.filtered(lambda line: line.tax_line_id)) == 1 and o.amount_untaxed == amount_by_group[2]">
+                                        <td><span t-esc="amount_by_group[0]"/></td>
+                                        <td class="text-right o_price_total">
+                                            <span t-esc="amount_by_group[3]"/>
+                                        </td>
+                                    </t>
+                                    <t t-else="">
+                                        <td>
+                                            <span t-esc="amount_by_group[0]"/>
+                                            <span>&amp;nbsp;<span>on</span>
+                                                <t t-esc="amount_by_group[4]"/>
+                                            </span>
+                                        </td>
+                                        <td class="text-right o_price_total">
+                                            <span t-esc="amount_by_group[3]"/>
+                                        </td>
+                                    </t>
+                                </tr>
+                            </t>
+                            <tr class="border-black o_total">
+                                <td><strong>Total</strong></td>
+                                <td class="text-right">
+                                    <span t-field="o.amount_total"/>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
 
+
+            </xpath>          
 
             <xpath expr="//div[hasclass('clearfix')]" position="after">
                 <p t-if="o.legal_text">
