--- a/mcr_reports/views/report/account_report_invoice_document.xml
+++ b/mcr_reports/views/report/account_report_invoice_document.xml
@@ -54,14 +54,14 @@
                 <div id="total" class="row">
                     <div t-attf-class="#{'col-5' if report_type != 'html' else 'col-sm-7 col-md-5'} ml-auto">
                         <table class="table table-sm;page-break-inside: avoid;">
-                            <tr class="border-black o_subtotal" style="">
+                            <tr class="text-left border-black o_subtotal" style="">
                                 <td><strong>Subtotal</strong></td>
                                 <td class="text-right">
                                     <span t-field="o.amount_untaxed"/>
                                 </td>
                             </tr>
                             <t t-foreach="o.amount_by_group" t-as="amount_by_group">
-                                <tr style="">
+                                <tr class="text-left" style="">
                                     <t t-if="len(o.line_ids.filtered(lambda line: line.tax_line_id)) == 1 and o.amount_untaxed == amount_by_group[2]">
                                         <td><span t-esc="amount_by_group[0]"/></td>
                                         <td class="text-right o_price_total">
@@ -81,7 +81,7 @@
                                     </t>
                                 </tr>
                             </t>
-                            <tr class="border-black o_total">
+                            <tr class="text-left border-black o_total">
                                 <td><strong>Total</strong></td>
                                 <td class="text-right">
                                     <span t-field="o.amount_total"/>
@@ -130,7 +130,6 @@
                     </div>
             </xpath>
 
-            <!-- Tampoco encuentra la siguiente expresión -->
             <xpath expr="//th[@name='th_taxes']" position="attributes">
                 <attribute name="t-if">False</attribute>
             </xpath>
