--- a/mcr_reports/views/report/report_saleorder_document.xml
+++ b/mcr_reports/views/report/report_saleorder_document.xml
@@ -6,25 +6,6 @@
             </xpath>
             <xpath expr="//td[@name='td_taxes']" position="replace">
             </xpath>
-            <!-- Cust. PO Number -->
-            <!--
-            <xpath expr="/t/t/div/h2" position="after">
-                <div class="row">
-                <div class="col-3">
-                    <span>
-                    <strong>Cust. PO number:</strong>
-                    <br/>
-                    </span>
-                    <span t-field="doc.x_studio_cust_po_number"/>
-                </div>
-                <div class="col-3"/>
-                <div class="col-3"/>
-                <div class="col-3"/>
-                </div>
-            </xpath>   
-            -->
-            <!-- <xpath expr="/t/t/div/div[3]/div[2]" position="inside"> 
-            <xpath expr="//div[@class='row mt32 mb32']" position="inside"> -->
             <xpath expr="//h2[@class='mt16']" position="after">
                 <div id="delivery date">
                 <span>
@@ -34,28 +15,71 @@
                     </span>
                 </div>
             </xpath>
-
+            <!-- Quitar las horas del formato de fecha -->
             <xpath expr="//div[@id='informations']//p[@t-field='doc.date_order']" position="attributes">
                 <attribute name="t-options-widget">"date"</attribute>
             </xpath>
             <xpath expr="//div[@id='delivery date']//span[@t-field='doc.commitment_date']" position="attributes">
                 <attribute name="t-options-widget">"date"</attribute>
             </xpath>
-        </template>
-        <!-- 
-        <template id="report_saleorder_studio_custom" inherit_id="studio_customization.odoo_studio_report_s_a960d18a-5032-4631-9251-13416d79ac0f">
-            <xpath expr="/t/t/div/div[3]/div[2]" position="inside">
-                <span>
-                <strong>Delivery Date:</strong>
-                <br/>
-                </span>
-            </xpath>
+
+            <!--Ajuste margen izquierdo: Número del pedido -->
+            <xpath expr="//h2[@class='mt16']" position="attributes">
+                <attribute name="style" separator=";" add="margin-left:-2px"/>
+            </xpath>  
+            <!--Ajuste margen izquierdo: Detalle del pedido -->
+            <xpath expr="//table[@class='table table-sm o_main_table']" position="attributes">
+                <attribute name="style" separator=";" add="margin-left:-4px"/>
+            </xpath>   
+
+            <!--Ampliar el ancho del subtotal-->
+             <xpath expr="//div[@id='total']" position="replace">
+               <div id="total" class="row" name="total">
+                    <div t-attf-class="#{'col-5' if report_type != 'html' else 'col-sm-7 col-md-5'} ml-auto">
+                        <table class="table table-sm">
+                            <tr class="border-black o_subtotal" style="">
+                                <td name="td_amount_untaxed_label" class="text-left"><strong>Subtotal</strong></td>
+                                <td name="td_amount_untaxed" class="text-right">
+                                    <span t-field="doc.amount_untaxed"/>
+                                </td>
+                            </tr>
+                            <t t-foreach="doc.amount_by_group" t-as="amount_by_group">
+                                <tr style="">
+                                    <t t-if="amount_by_group[5] == 1 and doc.amount_untaxed == amount_by_group[2]">
+                                        <td name="td_amount_by_group_label_3">
+                                            <span t-esc="amount_by_group[0]"/>
+                                            <span>&amp;nbsp;<span>on</span>&amp;nbsp;<t t-esc="amount_by_group[2]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/></span>
+                                        </td>
+                                        <td name="td_amount_by_group_3" class="text-right o_price_total">
+                                            <span t-esc="amount_by_group[1]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/>
+                                        </td>
+                                    </t>
+                                    <t t-else="">
+                                        <td name="td_amount_by_group_label">
+                                            <span t-esc="amount_by_group[0]"/>
+                                        </td>
+                                        <td name="td_amount_by_group" class="text-right o_price_total">
+                                            <span t-esc="amount_by_group[1]" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.pricelist_id.currency_id}"/>
+                                        </td>
+                                    </t>
+                                </tr>
+                            </t>
+                            <tr class="border-black o_total">
+                                <td name="td_amount_total_label" class="text-left"><strong>Total</strong></td>
+                                <td name="td_amount_total" class="text-right">
+                                    <span t-field="doc.amount_total"/>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                    
+            </xpath>          
 
 
-            <xpath expr="/t/t/div/div[3]/div[2]" position="attributes">
-                <attribute name="style" separator=";" add="margin-left:200px"/>
-            </xpath>            
+
+
+
         </template>
-        -->
     </data>
 </odoo>
