20210615 - Arreglo Texto legal

--- a/mcr_reports/views/account_move_views.xml
+++ b/mcr_reports/views/account_move_views.xml
@@ -33,7 +33,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='name']" position="after">
                     <!-- <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" attrs="{'invisible': ['type','=','out_invoice']}" /> -->
-                    <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" invisible="context.get('default_type') in ('out_invoice', 'out_refund','out_receipt')" />
+                    <!-- <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" invisible="context.get('default_type') in ('out_invoice', 'out_refund','out_receipt')" /> -->
                 </xpath>
                 <xpath expr="//field[@name='invoice_origin']" position="attributes">
                     <attribute name="attrs">{}</attribute>
