20210615 - x_studio_supplier_invoice -> no requerido en facturas de venta

--- a/mcr_reports/views/report/account_report_invoice_document.xml
+++ b/mcr_reports/views/report/account_report_invoice_document.xml
@@ -100,7 +100,7 @@
                     <strong><span style="font-size: 14px;" t-field="o.partner_id.import_information"/></strong>
                 </p>
                 <div style="font-size: 14px;">
-                    Origen UE
+                    Origin UE
                 </div>
                 <div t-if="o.number_of_pallets" style="font-size: 14px;">
                     Number of pallets: <span t-field="o.number_of_pallets"/>
