--- a/mcr_reports/views/account_move_views.xml
+++ b/mcr_reports/views/account_move_views.xml
@@ -15,7 +15,8 @@
                     <field name="invoice_type" required="context.get('extra_required', False)" attrs="{'invisible': [('type', '=', 'entry')]}" />
                     <!-- <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" attrs="{'invisible': ['|','&amp;',['type','=','out_invoice'],['type','=','entry'],['journal_id','=','sale']]}" /> -->
                     <!-- <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" attrs="{'invisible': ['|',['type','=','out_invoice'],[('&amp;','type','=','entry', )],]}" /> -->
-                    <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" attrs="{'invisible': ['|',['type','=','out_invoice'],['type','=','entry']]}" />
+                    <!-- <field name="x_studio_supplier_invoice_number" required="context.get('extra_required', False)" attrs="{'invisible': ['|',['type','=','out_invoice'],['type','=','entry']]}" /> -->
+                    <field name="x_studio_supplier_invoice_number" attrs="{'invisible': ['|',['type','=','out_invoice'],['type','=','entry']]}" />
                 </xpath>
                 <xpath expr="//field[@name='currency_id']" position="after">
                     <field name="shipping_number_1" attrs="{'invisible': [('type', '=', 'entry')]}" />
