--- a/mcr_reports/views/report/stock_report_delivery_document.xml
+++ b/mcr_reports/views/report/stock_report_delivery_document.xml
@@ -39,7 +39,7 @@
             </xpath>
 
             <xpath expr="//table[@name='stock_move_line_table']" position="after">
-                <div class="mt-4">Origen UE
+                <div class="mt-4">Origin UE
                 </div>
                 <div t-if="o.partner_id.other_info_1">
                     <span t-field="o.partner_id.other_info_1"/>
