20210616 - Agrupar productos con lote

--- a/mcr_reports/views/report/stock_report_delivery_document.xml
+++ b/mcr_reports/views/report/stock_report_delivery_document.xml
@@ -45,6 +45,40 @@
                     <span t-field="o.partner_id.other_info_1"/>
                 </div>
             </xpath>
+
+     <xpath expr="//table[@class='table table-sm mt48']" position="replace">
+            <table class="table table-sm mt48" t-if="o.move_line_ids and o.state=='done'" name="stock_move_line_table">
+                <thead>
+                    <tr>
+                        <th name="th_sml_product"><strong>Product</strong></th>
+                        <th name="th_sml_quantity" class="text-center"><strong>Quantity</strong></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr t-foreach="o.group_products()" t-as="line">
+                        <t t-set="move_line" t-value="line[1]['move_line']"/>
+                        <td>
+                            <span t-field="move_line.product_id"/>
+                            <p t-if="move_line.move_id.description_picking != move_line.product_id.name">
+                                <span t-field="move_line.move_id.description_picking"/>
+                            </p>
+                        </td>
+                        <td class="text-center">
+                            <span t-esc="line[1]['qty']"/>
+                            <span t-field="move_line.product_uom_id"/>
+                        </td>
+                    </tr>
+
+                    <!-- <t t-set="detalle" t-value="[]"/>
+                    <t t-foreach="o.move_line_ids" t-as="move_line"> -->
+                </tbody>
+            </table>
+        </xpath>         
+
+
         </template>
+
+    
+    
     </data>
 </odoo>
