--- a/mcr_reports/views/report/account_report_invoice_document.xml
+++ b/mcr_reports/views/report/account_report_invoice_document.xml
@@ -63,20 +63,20 @@
                             <t t-foreach="o.amount_by_group" t-as="amount_by_group">
                                 <tr class="text-left" style="">
                                     <t t-if="len(o.line_ids.filtered(lambda line: line.tax_line_id)) == 1 and o.amount_untaxed == amount_by_group[2]">
-                                        <td><span t-esc="amount_by_group[0]"/></td>
+                                        <td><span t-field="amount_by_group[0]"/></td>
                                         <td class="text-right o_price_total">
-                                            <span t-esc="amount_by_group[3]"/>
+                                            <span t-field="amount_by_group[3]"/>
                                         </td>
                                     </t>
                                     <t t-else="">
                                         <td>
-                                            <span t-esc="amount_by_group[0]"/>
+                                            <span t-field="amount_by_group[0]"/>
                                             <span>&amp;nbsp;<span>on</span>
-                                                <t t-esc="amount_by_group[4]"/>
+                                                <t t-field="amount_by_group[4]"/>
                                             </span>
                                         </td>
                                         <td class="text-right o_price_total">
-                                            <span t-esc="amount_by_group[3]"/>
+                                            <span t-field="amount_by_group[3]"/>
                                         </td>
                                     </t>
                                 </tr>
